[package]
name = "hotpot-db"
version = "0.1.0"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusqlite = "0.21.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled", "serde_json"]