[package]
name = "hotpot-db"
version = "0.0.0"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"
description = "🌶 hottest way to store data on the web. If you like JSON and dealing with things later"
keywords = ["database", "storage", "sqlite", "nosql", "json"]
homepage = "https://github.com/drbh/hotpot-db"
repository = "https://github.com/drbh/hotpot-db.git"
readme = "README.md"
license = "MIT"

[dependencies]
# rusqlite = "0.21.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled", "serde_json"]